refactor: move viatra into a separate subproject