@@ -1,64 +1,37 @@
-package tools.refinery.store.query.test;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Stream;
+package tools.refinery.store.query.viatra.tests;
 
 import org.junit.jupiter.api.Test;
-
 import tools.refinery.store.model.Tuple;
 import tools.refinery.store.model.representation.Relation;
 import tools.refinery.store.model.representation.TruthValue;
-import tools.refinery.store.query.QueriableModel;
-import tools.refinery.store.query.QueriableModelStore;
-import tools.refinery.store.query.QueriableModelStoreImpl;
-import tools.refinery.store.query.building.DNFAnd;
-import tools.refinery.store.query.building.DNFPredicate;
-import tools.refinery.store.query.building.EquivalenceAtom;
-import tools.refinery.store.query.building.PredicateAtom;
-import tools.refinery.store.query.building.RelationAtom;
-import tools.refinery.store.query.building.Variable;
+import tools.refinery.store.query.QueryableModel;
+import tools.refinery.store.query.QueryableModelStore;
+import tools.refinery.store.query.building.*;
+import tools.refinery.store.query.viatra.ViatraQueryableModelStore;
 import tools.refinery.store.query.view.FilteredRelationView;
 import tools.refinery.store.query.view.KeyOnlyRelationView;
 import tools.refinery.store.query.view.RelationView;
 
+import java.util.*;
+import java.util.stream.Stream;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 class QueryTest {
-
-	static void compareMatchSets(Stream<Object[]> matchSet, Set<List<Tuple>> expected) {
-		Set<List<Tuple>> translatedMatchSet = new HashSet<>();
-		var interator = matchSet.iterator();
-		while (interator.hasNext()) {
-			var element = interator.next();
-			List<Tuple> elementToTranslatedMatchSet = new ArrayList<>();
-			for (int i = 0; i < element.length; i++) {
-				elementToTranslatedMatchSet.add((Tuple) element[i]);
-			}
-			translatedMatchSet.add(elementToTranslatedMatchSet);
-		}
-
-		assertEquals(expected, translatedMatchSet);
-	}
-
 	@Test
 	void typeConstraintTest() {
 		Relation<Boolean> person = new Relation<>("Person", 1, false);
 		Relation<Boolean> asset = new Relation<>("Asset", 1, false);
-		RelationView<Boolean> persionView = new KeyOnlyRelationView(person);
+		RelationView<Boolean> personView = new KeyOnlyRelationView(person);
 
-		List<Variable> parameters = Arrays.asList(new Variable("p1"));
-		RelationAtom personRelationAtom = new RelationAtom(persionView, parameters);
-		DNFAnd clause = new DNFAnd(Collections.emptySet(), Arrays.asList(personRelationAtom));
-		DNFPredicate predicate = new DNFPredicate("TypeConstraint", parameters, Arrays.asList(clause));
+		List<Variable> parameters = List.of(new Variable("p1"));
+		RelationAtom personRelationAtom = new RelationAtom(personView, parameters);
+		DNFAnd clause = new DNFAnd(Collections.emptySet(), List.of(personRelationAtom));
+		DNFPredicate predicate = new DNFPredicate("TypeConstraint", parameters, List.of(clause));
 
-		QueriableModelStore store = new QueriableModelStoreImpl(Set.of(person, asset), Set.of(persionView),
+		QueryableModelStore store = new ViatraQueryableModelStore(Set.of(person, asset), Set.of(personView),
 				Set.of(predicate));
-		QueriableModel model = store.createModel();
+		QueryableModel model = store.createModel();
 
 		model.put(person, Tuple.of(0), true);
 		model.put(person, Tuple.of(1), true);
@@ -74,23 +47,23 @@ class QueryTest {
 	void relationConstraintTest() {
 		Relation<Boolean> person = new Relation<Boolean>("Person", 1, false);
 		Relation<TruthValue> friend = new Relation<>("friend", 2, TruthValue.FALSE);
-		RelationView<Boolean> persionView = new KeyOnlyRelationView(person);
+		RelationView<Boolean> personView = new KeyOnlyRelationView(person);
 		RelationView<TruthValue> friendMustView = new FilteredRelationView<TruthValue>(friend, (k, v) -> v.must());
 
 		Variable p1 = new Variable("p1");
 		Variable p2 = new Variable("p2");
 		List<Variable> parameters = Arrays.asList(p1, p2);
 
-		RelationAtom personRelationAtom1 = new RelationAtom(persionView, Arrays.asList(p1));
-		RelationAtom personRelationAtom2 = new RelationAtom(persionView, Arrays.asList(p2));
+		RelationAtom personRelationAtom1 = new RelationAtom(personView, List.of(p1));
+		RelationAtom personRelationAtom2 = new RelationAtom(personView, List.of(p2));
 		RelationAtom friendRelationAtom = new RelationAtom(friendMustView, Arrays.asList(p1, p2));
 		DNFAnd clause = new DNFAnd(Collections.emptySet(),
 				Arrays.asList(personRelationAtom1, personRelationAtom2, friendRelationAtom));
-		DNFPredicate predicate = new DNFPredicate("RelationConstraint", parameters, Arrays.asList(clause));
+		DNFPredicate predicate = new DNFPredicate("RelationConstraint", parameters, List.of(clause));
 
-		QueriableModelStore store = new QueriableModelStoreImpl(Set.of(person, friend),
-				Set.of(persionView, friendMustView), Set.of(predicate));
-		QueriableModel model = store.createModel();
+		QueryableModelStore store = new ViatraQueryableModelStore(Set.of(person, friend),
+				Set.of(personView, friendMustView), Set.of(predicate));
+		QueryableModel model = store.createModel();
 
 		assertEquals(0, model.countResults(predicate));
 
@@ -113,24 +86,24 @@ class QueryTest {
 	void andTest() {
 		Relation<Boolean> person = new Relation<Boolean>("Person", 1, false);
 		Relation<TruthValue> friend = new Relation<>("friend", 2, TruthValue.FALSE);
-		RelationView<Boolean> persionView = new KeyOnlyRelationView(person);
+		RelationView<Boolean> personView = new KeyOnlyRelationView(person);
 		RelationView<TruthValue> friendMustView = new FilteredRelationView<TruthValue>(friend, (k, v) -> v.must());
 
 		Variable p1 = new Variable("p1");
 		Variable p2 = new Variable("p2");
 		List<Variable> parameters = Arrays.asList(p1, p2);
 
-		RelationAtom personRelationAtom1 = new RelationAtom(persionView, Arrays.asList(p1));
-		RelationAtom personRelationAtom2 = new RelationAtom(persionView, Arrays.asList(p2));
+		RelationAtom personRelationAtom1 = new RelationAtom(personView, List.of(p1));
+		RelationAtom personRelationAtom2 = new RelationAtom(personView, List.of(p2));
 		RelationAtom friendRelationAtom1 = new RelationAtom(friendMustView, Arrays.asList(p1, p2));
 		RelationAtom friendRelationAtom2 = new RelationAtom(friendMustView, Arrays.asList(p2, p1));
 		DNFAnd clause = new DNFAnd(Collections.emptySet(),
 				Arrays.asList(personRelationAtom1, personRelationAtom2, friendRelationAtom1, friendRelationAtom2));
-		DNFPredicate predicate = new DNFPredicate("RelationConstraint", parameters, Arrays.asList(clause));
+		DNFPredicate predicate = new DNFPredicate("RelationConstraint", parameters, List.of(clause));
 
-		QueriableModelStore store = new QueriableModelStoreImpl(Set.of(person, friend),
-				Set.of(persionView, friendMustView), Set.of(predicate));
-		QueriableModel model = store.createModel();
+		QueryableModelStore store = new ViatraQueryableModelStore(Set.of(person, friend),
+				Set.of(personView, friendMustView), Set.of(predicate));
+		QueryableModel model = store.createModel();
 
 		assertEquals(0, model.countResults(predicate));
 
@@ -162,23 +135,23 @@ class QueryTest {
 	void existTest() {
 		Relation<Boolean> person = new Relation<Boolean>("Person", 1, false);
 		Relation<TruthValue> friend = new Relation<>("friend", 2, TruthValue.FALSE);
-		RelationView<Boolean> persionView = new KeyOnlyRelationView(person);
+		RelationView<Boolean> personView = new KeyOnlyRelationView(person);
 		RelationView<TruthValue> friendMustView = new FilteredRelationView<TruthValue>(friend, (k, v) -> v.must());
 
 		Variable p1 = new Variable("p1");
 		Variable p2 = new Variable("p2");
-		List<Variable> parameters = Arrays.asList(p1);
+		List<Variable> parameters = List.of(p1);
 
-		RelationAtom personRelationAtom1 = new RelationAtom(persionView, Arrays.asList(p1));
-		RelationAtom personRelationAtom2 = new RelationAtom(persionView, Arrays.asList(p2));
+		RelationAtom personRelationAtom1 = new RelationAtom(personView, List.of(p1));
+		RelationAtom personRelationAtom2 = new RelationAtom(personView, List.of(p2));
 		RelationAtom friendRelationAtom = new RelationAtom(friendMustView, Arrays.asList(p1, p2));
 		DNFAnd clause = new DNFAnd(Set.of(p2),
 				Arrays.asList(personRelationAtom1, personRelationAtom2, friendRelationAtom));
-		DNFPredicate predicate = new DNFPredicate("RelationConstraint", parameters, Arrays.asList(clause));
+		DNFPredicate predicate = new DNFPredicate("RelationConstraint", parameters, List.of(clause));
 
-		QueriableModelStore store = new QueriableModelStoreImpl(Set.of(person, friend),
-				Set.of(persionView, friendMustView), Set.of(predicate));
-		QueriableModel model = store.createModel();
+		QueryableModelStore store = new ViatraQueryableModelStore(Set.of(person, friend),
+				Set.of(personView, friendMustView), Set.of(predicate));
+		QueryableModel model = store.createModel();
 
 		assertEquals(0, model.countResults(predicate));
 
@@ -201,7 +174,7 @@ class QueryTest {
 		Relation<Boolean> person = new Relation<>("Person", 1, false);
 		Relation<Boolean> animal = new Relation<>("Animal", 1, false);
 		Relation<TruthValue> friend = new Relation<>("friend", 2, TruthValue.FALSE);
-		RelationView<Boolean> persionView = new KeyOnlyRelationView(person);
+		RelationView<Boolean> personView = new KeyOnlyRelationView(person);
 		RelationView<Boolean> animalView = new KeyOnlyRelationView(animal);
 		RelationView<TruthValue> friendMustView = new FilteredRelationView<TruthValue>(friend, (k, v) -> v.must());
 
@@ -210,15 +183,15 @@ class QueryTest {
 		List<Variable> parameters = Arrays.asList(p1, p2);
 
 		// Person-Person friendship
-		RelationAtom personRelationAtom1 = new RelationAtom(persionView, Arrays.asList(p1));
-		RelationAtom personRelationAtom2 = new RelationAtom(persionView, Arrays.asList(p2));
+		RelationAtom personRelationAtom1 = new RelationAtom(personView, List.of(p1));
+		RelationAtom personRelationAtom2 = new RelationAtom(personView, List.of(p2));
 		RelationAtom friendRelationAtom1 = new RelationAtom(friendMustView, Arrays.asList(p1, p2));
 		DNFAnd clause1 = new DNFAnd(Collections.emptySet(),
 				Arrays.asList(personRelationAtom1, personRelationAtom2, friendRelationAtom1));
 
 		// Animal-Animal friendship
-		RelationAtom animalRelationAtom1 = new RelationAtom(animalView, Arrays.asList(p1));
-		RelationAtom animalRelationAtom2 = new RelationAtom(animalView, Arrays.asList(p2));
+		RelationAtom animalRelationAtom1 = new RelationAtom(animalView, List.of(p1));
+		RelationAtom animalRelationAtom2 = new RelationAtom(animalView, List.of(p2));
 		RelationAtom friendRelationAtom2 = new RelationAtom(friendMustView, Arrays.asList(p1, p2));
 		DNFAnd clause2 = new DNFAnd(Collections.emptySet(),
 				Arrays.asList(animalRelationAtom1, animalRelationAtom2, friendRelationAtom2));
@@ -227,9 +200,9 @@ class QueryTest {
 
 		DNFPredicate predicate = new DNFPredicate("Or", parameters, Arrays.asList(clause1, clause2));
 
-		QueriableModelStore store = new QueriableModelStoreImpl(Set.of(person, animal, friend),
-				Set.of(persionView, animalView, friendMustView), Set.of(predicate));
-		QueriableModel model = store.createModel();
+		QueryableModelStore store = new ViatraQueryableModelStore(Set.of(person, animal, friend),
+				Set.of(personView, animalView, friendMustView), Set.of(predicate));
+		QueryableModel model = store.createModel();
 
 		model.put(person, Tuple.of(0), true);
 		model.put(person, Tuple.of(1), true);
@@ -249,21 +222,21 @@ class QueryTest {
 	@Test
 	void equalityTest() {
 		Relation<Boolean> person = new Relation<Boolean>("Person", 1, false);
-		RelationView<Boolean> persionView = new KeyOnlyRelationView(person);
+		RelationView<Boolean> personView = new KeyOnlyRelationView(person);
 
 		Variable p1 = new Variable("p1");
 		Variable p2 = new Variable("p2");
 		List<Variable> parameters = Arrays.asList(p1, p2);
 
-		RelationAtom personRelationAtom1 = new RelationAtom(persionView, Arrays.asList(p1));
-		RelationAtom personRelationAtom2 = new RelationAtom(persionView, Arrays.asList(p2));
+		RelationAtom personRelationAtom1 = new RelationAtom(personView, List.of(p1));
+		RelationAtom personRelationAtom2 = new RelationAtom(personView, List.of(p2));
 		EquivalenceAtom equivalenceAtom = new EquivalenceAtom(true, p1, p2);
 		DNFAnd clause = new DNFAnd(Collections.emptySet(),
 				Arrays.asList(personRelationAtom1, personRelationAtom2, equivalenceAtom));
-		DNFPredicate predicate = new DNFPredicate("Equality", parameters, Arrays.asList(clause));
+		DNFPredicate predicate = new DNFPredicate("Equality", parameters, List.of(clause));
 
-		QueriableModelStore store = new QueriableModelStoreImpl(Set.of(person), Set.of(persionView), Set.of(predicate));
-		QueriableModel model = store.createModel();
+		QueryableModelStore store = new ViatraQueryableModelStore(Set.of(person), Set.of(personView), Set.of(predicate));
+		QueryableModel model = store.createModel();
 
 		model.put(person, Tuple.of(0), true);
 		model.put(person, Tuple.of(1), true);
@@ -279,7 +252,7 @@ class QueryTest {
 	void inequalityTest() {
 		Relation<Boolean> person = new Relation<Boolean>("Person", 1, false);
 		Relation<TruthValue> friend = new Relation<>("friend", 2, TruthValue.FALSE);
-		RelationView<Boolean> persionView = new KeyOnlyRelationView(person);
+		RelationView<Boolean> personView = new KeyOnlyRelationView(person);
 		RelationView<TruthValue> friendMustView = new FilteredRelationView<TruthValue>(friend, (k, v) -> v.must());
 
 		Variable p1 = new Variable("p1");
@@ -287,18 +260,18 @@ class QueryTest {
 		Variable p3 = new Variable("p3");
 		List<Variable> parameters = Arrays.asList(p1, p2, p3);
 
-		RelationAtom personRelationAtom1 = new RelationAtom(persionView, Arrays.asList(p1));
-		RelationAtom personRelationAtom2 = new RelationAtom(persionView, Arrays.asList(p2));
+		RelationAtom personRelationAtom1 = new RelationAtom(personView, List.of(p1));
+		RelationAtom personRelationAtom2 = new RelationAtom(personView, List.of(p2));
 		RelationAtom friendRelationAtom1 = new RelationAtom(friendMustView, Arrays.asList(p1, p3));
 		RelationAtom friendRelationAtom2 = new RelationAtom(friendMustView, Arrays.asList(p2, p3));
 		EquivalenceAtom inequivalenceAtom = new EquivalenceAtom(false, p1, p2);
 		DNFAnd clause = new DNFAnd(Collections.emptySet(), Arrays.asList(personRelationAtom1, personRelationAtom2,
 				friendRelationAtom1, friendRelationAtom2, inequivalenceAtom));
-		DNFPredicate predicate = new DNFPredicate("Inequality", parameters, Arrays.asList(clause));
+		DNFPredicate predicate = new DNFPredicate("Inequality", parameters, List.of(clause));
 
-		QueriableModelStore store = new QueriableModelStoreImpl(Set.of(person, friend),
-				Set.of(persionView, friendMustView), Set.of(predicate));
-		QueriableModel model = store.createModel();
+		QueryableModelStore store = new ViatraQueryableModelStore(Set.of(person, friend),
+				Set.of(personView, friendMustView), Set.of(predicate));
+		QueryableModel model = store.createModel();
 
 		model.put(person, Tuple.of(0), true);
 		model.put(person, Tuple.of(1), true);
@@ -316,33 +289,33 @@ class QueryTest {
 	void patternCallTest() {
 		Relation<Boolean> person = new Relation<Boolean>("Person", 1, false);
 		Relation<TruthValue> friend = new Relation<>("friend", 2, TruthValue.FALSE);
-		RelationView<Boolean> persionView = new KeyOnlyRelationView(person);
+		RelationView<Boolean> personView = new KeyOnlyRelationView(person);
 		RelationView<TruthValue> friendMustView = new FilteredRelationView<TruthValue>(friend, (k, v) -> v.must());
 
 		Variable p1 = new Variable("p1");
 		Variable p2 = new Variable("p2");
 		List<Variable> parameters = Arrays.asList(p1, p2);
 
-		RelationAtom personRelationAtom1 = new RelationAtom(persionView, Arrays.asList(p1));
-		RelationAtom personRelationAtom2 = new RelationAtom(persionView, Arrays.asList(p2));
+		RelationAtom personRelationAtom1 = new RelationAtom(personView, List.of(p1));
+		RelationAtom personRelationAtom2 = new RelationAtom(personView, List.of(p2));
 		RelationAtom friendRelationAtom = new RelationAtom(friendMustView, Arrays.asList(p1, p2));
 		DNFAnd clause = new DNFAnd(Collections.emptySet(),
 				Arrays.asList(personRelationAtom1, personRelationAtom2, friendRelationAtom));
-		DNFPredicate friendPredicate = new DNFPredicate("RelationConstraint", parameters, Arrays.asList(clause));
+		DNFPredicate friendPredicate = new DNFPredicate("RelationConstraint", parameters, List.of(clause));
 
 		Variable p3 = new Variable("p3");
 		Variable p4 = new Variable("p4");
 		List<Variable> substitution = Arrays.asList(p3, p4);
-		RelationAtom personRelationAtom3 = new RelationAtom(persionView, Arrays.asList(p3));
-		RelationAtom personRelationAtom4 = new RelationAtom(persionView, Arrays.asList(p4));
+		RelationAtom personRelationAtom3 = new RelationAtom(personView, List.of(p3));
+		RelationAtom personRelationAtom4 = new RelationAtom(personView, List.of(p4));
 		PredicateAtom friendPredicateAtom = new PredicateAtom(true, false, friendPredicate, substitution);
 		DNFAnd patternCallClause = new DNFAnd(Collections.emptySet(),
 				Arrays.asList(personRelationAtom3, personRelationAtom4, friendPredicateAtom));
-		DNFPredicate predicate = new DNFPredicate("PatternCall", substitution, Arrays.asList(patternCallClause));
+		DNFPredicate predicate = new DNFPredicate("PatternCall", substitution, List.of(patternCallClause));
 
-		QueriableModelStore store = new QueriableModelStoreImpl(Set.of(person, friend),
-				Set.of(persionView, friendMustView), Set.of(friendPredicate, predicate));
-		QueriableModel model = store.createModel();
+		QueryableModelStore store = new ViatraQueryableModelStore(Set.of(person, friend),
+				Set.of(personView, friendMustView), Set.of(friendPredicate, predicate));
+		QueryableModel model = store.createModel();
 
 		model.put(person, Tuple.of(0), true);
 		model.put(person, Tuple.of(1), true);
@@ -360,34 +333,34 @@ class QueryTest {
 	void negativePatternCallTest() {
 		Relation<Boolean> person = new Relation<Boolean>("Person", 1, false);
 		Relation<TruthValue> friend = new Relation<>("friend", 2, TruthValue.FALSE);
-		RelationView<Boolean> persionView = new KeyOnlyRelationView(person);
+		RelationView<Boolean> personView = new KeyOnlyRelationView(person);
 		RelationView<TruthValue> friendMustView = new FilteredRelationView<TruthValue>(friend, (k, v) -> v.must());
 
 		Variable p1 = new Variable("p1");
 		Variable p2 = new Variable("p2");
 		List<Variable> parameters = Arrays.asList(p1, p2);
 
-		RelationAtom personRelationAtom1 = new RelationAtom(persionView, Arrays.asList(p1));
-		RelationAtom personRelationAtom2 = new RelationAtom(persionView, Arrays.asList(p2));
+		RelationAtom personRelationAtom1 = new RelationAtom(personView, List.of(p1));
+		RelationAtom personRelationAtom2 = new RelationAtom(personView, List.of(p2));
 		RelationAtom friendRelationAtom = new RelationAtom(friendMustView, Arrays.asList(p1, p2));
 		DNFAnd clause = new DNFAnd(Collections.emptySet(),
 				Arrays.asList(personRelationAtom1, personRelationAtom2, friendRelationAtom));
-		DNFPredicate friendPredicate = new DNFPredicate("RelationConstraint", parameters, Arrays.asList(clause));
+		DNFPredicate friendPredicate = new DNFPredicate("RelationConstraint", parameters, List.of(clause));
 
 		Variable p3 = new Variable("p3");
 		Variable p4 = new Variable("p4");
 		List<Variable> substitution = Arrays.asList(p3, p4);
-		RelationAtom personRelationAtom3 = new RelationAtom(persionView, Arrays.asList(p3));
-		RelationAtom personRelationAtom4 = new RelationAtom(persionView, Arrays.asList(p4));
+		RelationAtom personRelationAtom3 = new RelationAtom(personView, List.of(p3));
+		RelationAtom personRelationAtom4 = new RelationAtom(personView, List.of(p4));
 		PredicateAtom friendPredicateAtom = new PredicateAtom(false, false, friendPredicate, substitution);
 		DNFAnd negativePatternCallClause = new DNFAnd(Collections.emptySet(),
 				Arrays.asList(personRelationAtom3, personRelationAtom4, friendPredicateAtom));
 		DNFPredicate predicate = new DNFPredicate("NegativePatternCall", substitution,
-				Arrays.asList(negativePatternCallClause));
+				List.of(negativePatternCallClause));
 
-		QueriableModelStore store = new QueriableModelStoreImpl(Set.of(person, friend),
-				Set.of(persionView, friendMustView), Set.of(friendPredicate, predicate));
-		QueriableModel model = store.createModel();
+		QueryableModelStore store = new ViatraQueryableModelStore(Set.of(person, friend),
+				Set.of(personView, friendMustView), Set.of(friendPredicate, predicate));
+		QueryableModel model = store.createModel();
 
 		model.put(person, Tuple.of(0), true);
 		model.put(person, Tuple.of(1), true);
@@ -404,42 +377,56 @@ class QueryTest {
 	void transitivePatternCallTest() {
 		Relation<Boolean> person = new Relation<Boolean>("Person", 1, false);
 		Relation<TruthValue> friend = new Relation<>("friend", 2, TruthValue.FALSE);
-		RelationView<Boolean> persionView = new KeyOnlyRelationView(person);
+		RelationView<Boolean> personView = new KeyOnlyRelationView(person);
 		RelationView<TruthValue> friendMustView = new FilteredRelationView<TruthValue>(friend, (k, v) -> v.must());
 
 		Variable p1 = new Variable("p1");
 		Variable p2 = new Variable("p2");
 		List<Variable> parameters = Arrays.asList(p1, p2);
 
-		RelationAtom personRelationAtom1 = new RelationAtom(persionView, Arrays.asList(p1));
-		RelationAtom personRelationAtom2 = new RelationAtom(persionView, Arrays.asList(p2));
+		RelationAtom personRelationAtom1 = new RelationAtom(personView, List.of(p1));
+		RelationAtom personRelationAtom2 = new RelationAtom(personView, List.of(p2));
 		RelationAtom friendRelationAtom = new RelationAtom(friendMustView, Arrays.asList(p1, p2));
 		DNFAnd clause = new DNFAnd(Collections.emptySet(),
 				Arrays.asList(personRelationAtom1, personRelationAtom2, friendRelationAtom));
-		DNFPredicate friendPredicate = new DNFPredicate("RelationConstraint", parameters, Arrays.asList(clause));
+		DNFPredicate friendPredicate = new DNFPredicate("RelationConstraint", parameters, List.of(clause));
 
 		Variable p3 = new Variable("p3");
 		Variable p4 = new Variable("p4");
 		List<Variable> substitution = Arrays.asList(p3, p4);
-		RelationAtom personRelationAtom3 = new RelationAtom(persionView, Arrays.asList(p3));
-		RelationAtom personRelationAtom4 = new RelationAtom(persionView, Arrays.asList(p4));
+		RelationAtom personRelationAtom3 = new RelationAtom(personView, List.of(p3));
+		RelationAtom personRelationAtom4 = new RelationAtom(personView, List.of(p4));
 		PredicateAtom friendPredicateAtom = new PredicateAtom(true, true, friendPredicate, substitution);
 		DNFAnd patternCallClause = new DNFAnd(Collections.emptySet(),
 				Arrays.asList(personRelationAtom3, personRelationAtom4, friendPredicateAtom));
 		DNFPredicate predicate = new DNFPredicate("TransitivePatternCall", substitution,
-				Arrays.asList(patternCallClause));
+				List.of(patternCallClause));
 
-		QueriableModelStore store = new QueriableModelStoreImpl(Set.of(person, friend),
-				Set.of(persionView, friendMustView), Set.of(friendPredicate, predicate));
-		QueriableModel model = store.createModel();
+		QueryableModelStore store = new ViatraQueryableModelStore(Set.of(person, friend),
+				Set.of(personView, friendMustView), Set.of(friendPredicate, predicate));
+		QueryableModel model = store.createModel();
 
 		model.put(person, Tuple.of(0), true);
 		model.put(person, Tuple.of(1), true);
 		model.put(person, Tuple.of(2), true);
 		model.put(friend, Tuple.of(0, 1), TruthValue.TRUE);
 		model.put(friend, Tuple.of(1, 2), TruthValue.TRUE);
-		
+
 		model.flushChanges();
 		assertEquals(3, model.countResults(predicate));
+	}
+	static void compareMatchSets(Stream<Object[]> matchSet, Set<List<Tuple>> expected) {
+		Set<List<Tuple>> translatedMatchSet = new HashSet<>();
+		var iterator = matchSet.iterator();
+		while (iterator.hasNext()) {
+			var element = iterator.next();
+			List<Tuple> elementToTranslatedMatchSet = new ArrayList<>();
+			for (Object o : element) {
+				elementToTranslatedMatchSet.add((Tuple) o);
+			}
+			translatedMatchSet.add(elementToTranslatedMatchSet);
+		}
+
+		assertEquals(expected, translatedMatchSet);
 	}
 }
